--- a/terms.html
+++ b/terms.html
@@ -92,33 +92,50 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <span property="dc:title" content="GST Calculator - New Zealand (NZ)" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>      </header>
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-<p class="lead"><span style="color: #000000;">At GST Calculator New Zealand, we are here to make your life easier when it comes to calculating Goods and Services Tax (GST). Our user-friendly website provides a simple and efficient way to determine GST for your business transactions.</span>
-
-<span style="color: #000000;"><strong>Why Choose GST Calculator New Zealand?</strong></span>
+<p style="text-align: center;"><span style="color: #800000;"><strong>Terms and Conditions - GST Calculator New Zealand </strong></span></p>
+<span style="color: #000000;">Welcome to GST Calculator New Zealand! Before you start using our website, please take a moment to read and understand the following terms and conditions:</span>
 <ul>
- 	<li><span style="color: #000000;">Easy to Use: Our calculator is designed with simplicity in mind. You don't need to be a math whiz to use it! Just input the necessary details, and we'll handle the rest.</span></li>
- 	<li><span style="color: #000000;">Accurate Results: Accuracy is our top priority. You can trust our calculator to give you precise GST calculations every time.</span></li>
- 	<li><span style="color: #000000;">Time-Saving: Say goodbye to manual calculations and save valuable time with our instant GST results.</span></li>
- 	<li><span style="color: #000000;">Always Accessible: Whether you're on your computer, tablet, or smartphone, our website is available 24/7, so you can calculate GST whenever and wherever you need it.</span></li>
- 	<li><span style="color: #000000;">Free of Charge: Yes, you read that right! Our GST Calculator is completely free to use. No hidden fees or subscriptions.</span></li>
+ 	<li><span style="color: #000000;"><strong>Use of the Calculator:</strong> Our GST calculator is designed to help you calculate Goods and Services Tax (GST) amounts for New Zealand. It is intended for personal and informational use only. We strive to provide accurate calculations, but we cannot guarantee absolute precision.</span></li>
 </ul>
-<span style="color: #000000;"><strong>How to Use:</strong></span>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>No Liability for Accuracy:</strong> While we make every effort to ensure the accuracy of the information provided by the GST calculator, we are not liable for any errors or omissions in the calculations or any losses arising from its use. Always verify the results with a qualified professional.</span></li>
+</ul>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>Privacy Policy:</strong> Protecting your privacy is important to us. We collect minimal personal information necessary for the functioning of the website. We do not share your data with third parties without your consent. Please refer to our Privacy Policy for more details.</span></li>
+</ul>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>Third-Party Websites:</strong> Our website may contain links to third-party websites for additional resources. We do not endorse the content on those websites and are not responsible for their practices or policies. Accessing such links is at your own risk.</span></li>
+</ul>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>Prohibited Activities:</strong> Users must not engage in any activity that could harm, disable, or overload our website. Any attempt to breach security or interfere with the proper functioning of the site may result in legal action.</span></li>
+</ul>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>Intellectual Property:</strong> All content and materials on the GST Calculator New Zealand website, including but not limited to logos, graphics, and text, are protected by intellectual property laws. Users may not use, modify, or distribute the content without our explicit permission.</span></li>
+</ul>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>Changes to Terms and Conditions:</strong> We reserve the right to modify these terms and conditions at any time. Any changes will be effective immediately upon posting on the website. Continued use of the site after modifications implies acceptance of the revised terms.</span></li>
+</ul>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>Termination of Access:</strong> We may terminate or suspend access to the GST Calculator New Zealand website without prior notice for any reason, including suspected violations of these terms and conditions.</span></li>
+</ul>
+&nbsp;
+<ul>
+ 	<li><span style="color: #000000;"><strong>Governing Law:</strong> These terms and conditions are governed by the laws of New Zealand. Any dispute arising from the use of this website shall be subject to the exclusive jurisdiction of the courts of New Zealand.</span></li>
+</ul>
+&nbsp;
 
-<span style="color: #000000;">Using our GST Calculator is a breeze. Just follow these simple steps:</span>
-<ol>
- 	<li><span style="color: #000000;">Enter the Amount: Type in the total amount of your transaction.</span></li>
- 	<li><span style="color: #000000;">Choose the GST Rate: Select the applicable GST rate from the options provided.</span></li>
- 	<li><span style="color: #000000;">Get Instant Result: Click the "Calculate" button, and you'll receive the GST amount and the total including GST in a flash!</span></li>
-</ol>
-<span style="color: #000000;"><strong>Our Mission:</strong></span>
+<span style="color: #000000;">By using the <strong><a href="/nzgst/">GST Calculator New Zealand</a></strong> website, you acknowledge that you have read, understood, and agreed to these terms and conditions. If you do not agree with any part of these terms, please refrain from using our website.</span>
 
-<span style="color: #000000;">Our mission at GST Calculator New Zealand is to provide a reliable and user-friendly tool that helps businesses and individuals calculate GST with ease. We strive to simplify financial processes and empower our users to make informed decisions effortlessly.</span>
+<span style="color: #000000;">If you have any questions or concerns about these terms and conditions, please contact us at [contact email]. Thank you for using our GST calculator!</span>
 
-<span style="color: #000000;"><strong>Contact Us:</strong></span>
-
-<span style="color: #000000;">Got any questions, suggestions, or feedback? We'd love to hear from you! Please feel free to reach out to our friendly support team via email or through the contact form on our website. <strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="/nzgst/contact.html" target="_blank" rel="noopener">Click Here</a></span></strong></span>
-
-<span style="color: #000000;">Thank you for choosing GST Calculator New Zealand! Let's make GST calculations a breeze together.</span></p>
+<strong><span style="color: #000000;">Date of Last Update: [22/07/2023]</span></strong>
 <br>
 <div class="col-md-7">
 
@@ -133,9 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div></div></div></div>    </article>
 
 </section>
-<section id="block-block-87" class="block block-block clearfix">
 
-      
   <hr>
 </section>
   </div>
