--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ $200 + 15% = $230, however $230 - 15% is NOT equal $200, actually it's $195.5!</
     <section id="block-block-22" class="block block-block clearfix">
 
       
-  <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="/about.html">About Us</a> | <a title="Contact Us" href="/nzgst/contact.html">Contact Us</a>|<a title="Privacy Policy" href="/nzgst/privacy.html">Privacy Policy</a>|<a title="Terms and Condition" href="/nzgst/terms.html">Terms & Condition</a></p>
+  <p style="text-align: center;">2023 © <a title="GST Calculator NZ" href="/nzgst">GST Calculator NZ</a> | <a title="About Us" href="/about.html">About Us</a> | <a title="Contact Us" href="/contact.html">Contact Us</a>|<a title="Privacy Policy" href="/privacy.html">Privacy Policy</a>|<a title="Terms and Condition" href="/terms.html">Terms & Condition</a></p>
 </section>
   </div>
   </footer>
