--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
   <link rel="profile" href="http://www.w3.org/1999/xhtml/vocab" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8661320156412881"
+     crossorigin="anonymous"></script>
+  <meta name="google-site-verification" content="_ztbMDWmVzPYizsxY11a501uRi92fJ-bSLJ6UCuw6KI" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YBBYH99LFG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-YBBYH99LFG');
+</script>
 <style>
 .btn-responsive {
     white-space: normal !important;
@@ -18,7 +29,6 @@
 <meta name="keywords" content="gst calculator new zealand, nz, calculate, tax, accountant" />
 <meta property="og:site_name" content="GST Calculator NZ" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://gst.calculatorsaustralia.com.au/nz" />
 <meta property="og:title" content="GST Calculator - New Zealand (NZ)" />
 <meta property="og:description" content="GST is a 15% tax added to the cost of most things we buy in New Zealand, like goods and services. It applies to items made in New Zealand and those imported from other countries. Ever since GST was introduced, many people in New Zealand have to figure out how much GST they need to add to the price of things they sell or buy. They also need to calculate the GST included in the price to get tax credits for business expenses." />
 <meta name="dcterms.title" content="GST Calculator - New Zealand (NZ)" />
