--- a/about.html
+++ b/about.html
@@ -4,7 +4,18 @@
   <link rel="profile" href="http://www.w3.org/1999/xhtml/vocab" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8661320156412881"
+     crossorigin="anonymous"></script>
+  <meta name="google-site-verification" content="_ztbMDWmVzPYizsxY11a501uRi92fJ-bSLJ6UCuw6KI" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YBBYH99LFG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-YBBYH99LFG');
+</script>
 <style>
 .btn-responsive {
     white-space: normal !important;
