--- a/terms.html
+++ b/terms.html
@@ -142,7 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </ul>
 &nbsp;
 
-<span style="color: #000000;">By using the <strong><a href="/nzgst/">GST Calculator New Zealand</a></strong> website, you acknowledge that you have read, understood, and agreed to these terms and conditions. If you do not agree with any part of these terms, please refrain from using our website.</span>
+<span style="color: #000000;">By using the <strong><a href="/">GST Calculator New Zealand</a></strong> website, you acknowledge that you have read, understood, and agreed to these terms and conditions. If you do not agree with any part of these terms, please refrain from using our website.</span>
 
 <span style="color: #000000;">If you have any questions or concerns about these terms and conditions, please contact us at [contact email]. Thank you for using our GST calculator!</span>
 
